--- a/Instructions/20533C_LAB_AK_04.md
+++ b/Instructions/20533C_LAB_AK_04.md
@@ -31,7 +31,7 @@
   - Update domains: **5**
 > **Note:** The number of update domains can vary between 5 and 20.
 
-  - Managed: **Yes**
+  - Managed: **No**
 
 1. Wait for deployment to complete. This should take only a few seconds.
 
@@ -61,11 +61,11 @@
 
 1. Click **OK**. The **Choose a size** blade automatically appears.
 
-2. On the **Choose a size** blade, if needed, click **View all**, click **A1 Standard**, and then click **Select**. The **Settings** blade appears.
+2. On the **Choose a size** blade, if needed, click **View all**, click **A1 Standard**, and then click **Select** (choose the **D1_v2 Standard** or similar if **A1 Standard** is not available). The **Settings** blade appears.
 
 3. On the **Settings** blade, specify the following settings:
 
-  - Use managed disks: *Yes**
+  - Use managed disks: **No**
 
   - Virtual network: _Accept the default name **20533C0401-LabRG-vnet** and settings_
 
@@ -111,11 +111,11 @@
 
 1. Click **OK**. The **Choose a size** blade automatically appears.
 
-2. On the **Choose a size** blade, if needed, click **View all**, click **A1 Standard**, and then click **Select**. The **Settings** blade appears.
+2. On the **Choose a size** blade, if needed, click **View all**, click **A1 Standard**, and then click **Select** (choose the **D1_v2 Standard** or similar if **A1 Standard** is not available). The **Settings** blade appears.
 
 3. On the **Settings** blade, specify the following settings:
 
-  - Use managed disks: *Yes**
+  - Use managed disks: **No**
 
   - Virtual network: **20533C0401-LabRG-vnet**
 
