--- a/Instructions/20533C_LAB_04.md
+++ b/Instructions/20533C_LAB_04.md
@@ -64,7 +64,7 @@ The main tasks for this exercise are as follows:
   - Update domains: **5**
 > **Note:** The number of update domains can vary between 5 and 20.
 
-  - Managed: **Yes**
+  - Managed: **No**
 
 
 1. From the Azure portal, create a new virtual machine with the following settings:
@@ -84,7 +84,7 @@ The main tasks for this exercise are as follows:
 
   - Location: **_The same location you chose for the availability set_**.
 
-  - Size: **A1 Standard**
+  - Size: **A1 Standard** (choose the **D1_v2 Standard** or similar if **A1 Standard** is not available)
 
   - Use managed disks: **No**
 
@@ -120,7 +120,7 @@ The main tasks for this exercise are as follows:
 
   - Location: **_The same location you chose for the availability set_**.
 
-  - Size: **A1 Standard**
+  - Size: **A1 Standard** (choose the **D1_v2 Standard** or similar if **A1 Standard** is not available)
 
   - Use managed disks: **No**
 
