--- a/Instructions/20533C_LAB_04.md
+++ b/Instructions/20533C_LAB_04.md
@@ -64,7 +64,7 @@ The main tasks for this exercise are as follows:
   - Update domains: **5**
 > **Note:** The number of update domains can vary between 5 and 20.
 
-  - Managed: **No**
+  - Use managed disks: **No (Classic)**
 
 
 1. From the Azure portal, create a new virtual machine with the following settings:
