Lab 09: In exercise 1, task 4, Karen Gruber is used, as in the AK version, to enable the next tasks and exercises. Moreover, Karen Gruber should be added to Marketing group, so the exercise makes more sense. In exercise 3, task 2, the setup of multi-factor authentication is obligatory, otherwise, the next exercise will not work. Fixed some formatting issues. Fixed numbering.

--- a/Instructions/20533C_LAB_09.md
+++ b/Instructions/20533C_LAB_09.md
@@ -101,9 +101,9 @@ The main tasks for this exercise are as follows:
   - Enable Multi-Factor Authentication: _Do not select_
 
 
-1. Note the new password.
+2. Note the new password.
 
-2. Create another user in the Adatum directory with the following settings:
+3. Create another user in the Adatum directory with the following settings:
 
 
   - TYPE OF USER: **New user in your organization**
@@ -122,16 +122,16 @@ The main tasks for this exercise are as follows:
 
   - Enable Multi-Factor Authentication: _Do not select_
 
-1. Note the new password.
+4. Note the new password.
 
-2. Open an InPrivate Internet Explorer window, navigate to the Azure portal, sign in as Remi Desforges, when prompted, change the password to **Pa55w.rd** and then sign-out and close the InPrivate Internet Explorer window. 
+5. Open an InPrivate Internet Explorer window, navigate to the Azure portal, sign in as Remi Desforges, when prompted, change the password to **Pa55w.rd** and then sign-out and close the InPrivate Internet Explorer window. 
 
-3. Open an InPrivate Internet Explorer window, navigate to the Azure portal, sign in as Karen Gruber, when prompted, change the password to **Pa55w.rd** and then sign-out and close the InPrivate Internet Explorer window. 
+6. Open an InPrivate Internet Explorer window, navigate to the Azure portal, sign in as Karen Gruber, when prompted, change the password to **Pa55w.rd** and then sign-out and close the InPrivate Internet Explorer window. 
 
 
 #### Task 4: Manage groups by using the Azure portal
   
-1. From the Azure classic portal, assign an Azure Active Directory Premium P2 license to your user account.
+1. From the Azure classic portal, assign an Azure Active Directory Premium P2 license to **Karen Gruber**.
 
 2. In the Azure classic portal, navigate to the **CONFIGURE** page of the **adatum** Azure AD tenant.
 
@@ -147,9 +147,9 @@ The main tasks for this exercise are as follows:
   - DESCRIPTION: **Sales employees**
 
 
-1. Add **Remi Desforges** to the **Sales** group.
+5. Add **Remi Desforges** to the **Sales** group.
 
-2. Create the following group in the Adatum directory:
+6. Create the following group in the Adatum directory:
 
 
   - NAME: **Marketing**
@@ -159,9 +159,9 @@ The main tasks for this exercise are as follows:
   - DESCRIPTION: **Marketing employees**
 
 
-1. Add **Remi Desforges** to the **Marketing** group.
+7. Add **Karen Gruber** to the **Marketing** group.
 
-2. Create the following group in the Adatum directory:
+8. Create the following group in the Adatum directory:
 
 
   - NAME: **Sales and Marketing**
@@ -171,7 +171,7 @@ The main tasks for this exercise are as follows:
   - DESCRIPTION: **Sales and Marketing employees**
 
 
-1. Add the **Sales** and **Marketing** groups to the **Sales and Marketing** group.
+9. Add the **Sales** and **Marketing** groups to the **Sales and Marketing** group.
 
 
 
@@ -295,7 +295,7 @@ The main tasks for this exercise are as follows:
 
 #### Task 2: Test SSO
   
-1. Open an Internet Explorer window and browse to **https://myapps.microsoft.com. When prompted, sign in by using specify the full user name (including the @_domain name_.onmicrosoft.com suffix) of the Mario Ledford's account and the corresponding password. 
+1. Open an Internet Explorer window and browse to https://myapps.microsoft.com. When prompted, sign in by using specify the full user name (including the @_domain name_.onmicrosoft.com suffix) of the Mario Ledford's account and the corresponding password. 
 
 2. On the applications page, click the ellipsis next to **Skype**. Note the option to update the credentials. 
 
@@ -303,7 +303,7 @@ The main tasks for this exercise are as follows:
 
 4. Click **Skype** and, when prompted, install the Access Panel Extension with the default settings and enable the extension once the installation completes.
 
-5. Restart Internet Explorer and browse to **https://myapps.microsoft.com. When prompted, sign in as Mario Ledford.
+5. Restart Internet Explorer and browse to https://myapps.microsoft.com. When prompted, sign in as Mario Ledford.
 
 6. From the Application Access Panel, start **Skype**. Note that you are now prompted for credentials, because you did not enter any credentials on behalf of the user when configuring SSO. 
 
@@ -344,11 +344,9 @@ The main tasks for this exercise are as follows:
 
 2. Click **Set it up now**.
 
-3. On the **Additional security verification** page, in the first drop-down list, note the contact options.
+3. On the **Additional security verification** page, in the first drop-down list, select **Authentication phone**. Enter your phone number and select the option **Call me**.
 
-4. Optional step: If you have access to a mobile phone in the classroom and have a signal or data connection, you can complete the additional security verification steps on the **Additional security verification** page.
-
-5. Close Internet Explorer
+4. Close Internet Explorer
 
 > **Result**: After completing this exercise, you should have configured Multi-Factor Authentication for a Global Admin account.
 
