--- a/Instructions/20533C_LAB_AK_09.md
+++ b/Instructions/20533C_LAB_AK_09.md
@@ -57,7 +57,7 @@
   - USER NAME: **rdesforges**
 
 
-1. In the **user profile** dialog box, enter the following settings, and then click **Next**:
+5. In the **user profile** dialog box, enter the following settings, and then click **Next**:
 
 
   - FIRST NAME: **Remi**
@@ -71,15 +71,15 @@
   - Enable Multi-Factor Authentication: _Do not select_
 
 
-1. Click **create**.
+6. Click **create**.
 
-2. On the **Get temporary password** page, note the full user name (including the full domain name after the **@** character) and the new password.
+7. On the **Get temporary password** page, note the full user name (including the full domain name after the **@** character) and the new password.
 
-3. Click **Complete** (check mark).
+8. Click **Complete** (check mark).
 
-4. Click **ADD USER**.
+9. Click **ADD USER**.
 
-5. In the **Tell us about this user** dialog box, enter the following settings, and then click **Next**:
+10. In the **Tell us about this user** dialog box, enter the following settings, and then click **Next**:
 
 
   - TYPE OF USER: **New user in your organization**
@@ -87,7 +87,7 @@
   - USER NAME: **kgruber**
 
 
-1. In the **user profile** dialog box, enter the following settings, and then click **Next**:
+11. In the **user profile** dialog box, enter the following settings, and then click **Next**:
 
 
   - FIRST NAME: **Karen**
@@ -103,29 +103,29 @@
   - Enable Multi-Factor Authentication: _Do not select_
 
 
-1. Click **Create**.
+12. Click **Create**.
 
-2. On the **Get temporary password** page, note the full user name (including the full domain name after the **@** character) and the new password.
+13. On the **Get temporary password** page, note the full user name (including the full domain name after the **@** character) and the new password.
 
-3. Click **Complete** (check mark).
+14. Click **Complete** (check mark).
 
-4. Start an in-private Internet Explorer session and browse to the Azure portal at **http://portal.azure.com**.
+15. Start an in-private Internet Explorer session and browse to the Azure portal at **http://portal.azure.com**.
 
-5. When prompted to sign in, specify the full user name (including the @_domain name_.onmicrosoft.com suffix) of Remi Desforges' account and the corresponding temporary password. 
+16. When prompted to sign in, specify the full user name (including the @_domain name_.onmicrosoft.com suffix) of Remi Desforges' account and the corresponding temporary password. 
 
-6. On the **Update your password** page, in the **Current password** box, type again the temporary password. In the **New password** and **Confirm password** text boxes, type **Pa55w.rd**, and click **Update password and sign in**.
+17. On the **Update your password** page, in the **Current password** box, type again the temporary password. In the **New password** and **Confirm password** text boxes, type **Pa55w.rd**, and click **Update password and sign in**.
 
-7. Click the user name in the upper-right corner and, in the drop-down menu, click **Sign out**
+18. Click the user name in the upper-right corner and, in the drop-down menu, click **Sign out**
 
-8. Close the in-private Internet Explorer session.
+19. Close the in-private Internet Explorer session.
 
-9. Start an in-private Internet Explorer session and browse to the Azure portal at **http://manage.windowsazure.com**.
+20. Start an in-private Internet Explorer session and browse to the Azure portal at **http://manage.windowsazure.com**.
 
-10. When prompted to sign in, specify the full user name (including the @_domain name_.onmicrosoft.com suffix) of Karen Gruber's account and the corresponding temporary password. 
+21. When prompted to sign in, specify the full user name (including the @_domain name_.onmicrosoft.com suffix) of Karen Gruber's account and the corresponding temporary password. 
 
-11. On the **Update your password** page, in the **Current password** box, type the temporary password. In the **New password** and**Confirm password** boxes, type**Pa55w.rd**, and click **Update password and sign in**.
+22. On the **Update your password** page, in the **Current password** box, type the temporary password. In the **New password** and**Confirm password** boxes, type**Pa55w.rd**, and click **Update password and sign in**.
 
-12. Close the in-private session of Internet Explorer.
+23. Close the in-private session of Internet Explorer.
 
 
 
@@ -167,17 +167,17 @@
   - DESCRIPTION: **Sales employees**
 
 
-1. Click **Sales**.
+15. Click **Sales**.
 
-2. Click **ADD MEMBERS**.
+16. Click **ADD MEMBERS**.
 
-3. On the **Add members** page, click **Remi Desforges**, and click **Complete**.
+17. On the **Add members** page, click **Remi Desforges**, and click **Complete**.
 
-4. Click the **Back** button.
+18. Click the **Back** button.
 
-5. Click **ADD GROUP**.
+19. Click **ADD GROUP**.
 
-6. In the **Add Group** dialog box, enter the following settings, and then click **Complete**:
+20. In the **Add Group** dialog box, enter the following settings, and then click **Complete**:
 
 
   - NAME: **Marketing**
@@ -187,17 +187,17 @@
   - DESCRIPTION: **Marketing employees**
 
 
-1. Click **Marketing**.
+21. Click **Marketing**.
 
-2. Click **ADD MEMBERS**.
+22. Click **ADD MEMBERS**.
 
-3. On the **Add members** page, click **Karen Gruber**, and click **Complete** (check mark).
+23. On the **Add members** page, click **Karen Gruber**, and click **Complete** (check mark).
 
-4. Click the **Back** button.
+24. Click the **Back** button.
 
-5. Click **ADD GROUP**.
+25. Click **ADD GROUP**.
 
-6. In the **Add Group** dialog box, enter the following settings, and then click **Complete**:
+26. In the **Add Group** dialog box, enter the following settings, and then click **Complete**:
 
 
   - NAME: **Sales and Marketing**
@@ -207,19 +207,19 @@
   - DESCRIPTION: **Sales and Marketing employees**
 
 
-1. Click **Sales and Marketing**.
+27. Click **Sales and Marketing**.
 
-2. Click **ADD MEMBERS**.
+28. Click **ADD MEMBERS**.
 
-3. On the **Add members** page, in the **SHOW** drop-down box, click **Groups**, and click the **Confirm** button to the right of the **SHOW** drop-down box.
+29. On the **Add members** page, in the **SHOW** drop-down box, click **Groups**, and click the **Confirm** button to the right of the **SHOW** drop-down box.
 
-4. Click **Marketing**.
+30. Click **Marketing**.
 
-5. Click **Sales**.
+31. Click **Sales**.
 
-6. Click **Complete** (check mark).
+32. Click **Complete** (check mark).
 
-7. Click the **Back** button.
+33. Click the **Back** button.
 
 
 
@@ -454,9 +454,11 @@
 
 4. Click **Set it up now**.
 
-5. On the **Additional security verification** page, in the first drop-down list, note the contact options.
+5. On the **Additional security verification** page, in the first drop-down list, select **Authentication phone**.
 
-6. Optional step: If you have access to a mobile phone in the classroom and have a signal or data connection, you can complete the additional security verification steps on the **Additional security verification** page.
+6. Enter your phone number and, under **Method** select **Call me**. Click **Contact me**.
+
+7. Answer the phone call and press **#** on your phone. On the page **Step 3: Keep using your existing applications** click **Done**.
 
 7. Close Internet Explorer.
 
