--- a/Instructions/20533C_LAB_AK_03.md
+++ b/Instructions/20533C_LAB_AK_03.md
@@ -169,7 +169,7 @@
 
 #### Task 2: Use Azure PowerShell to validate the deployment of the app server's virtual machines
   
-1. On MIA-CL1, right-click the Windows PowerShell icon on the taskbar and click **Run as Administrator**. When prompted by User Account Control, click **Yes**.
+1. On MIA-CL1, right-click Windows PowerShell on the taskbar and click **Run ISE as Administrator**. When prompted by User Account Control, click **Yes**.
 
 2. In the Windows PowerShell ISE window, at the console prompt, type the following cmdlet, and then press Enter:
 
