--- a/Instructions/20533C_LAB_AK_04.md
+++ b/Instructions/20533C_LAB_AK_04.md
@@ -171,15 +171,15 @@
 
 3. On the ResDevWebLB load balancer blade, click **Backend pools**, and then click **Add**.
 
-4. On the **Add backend pool** blade, in the **Name** text box, type **ResDevWebLBPool**, and then click **Add a virtual machine**.
+4. On the **Add backend pool** blade, in the **Name** text box, type **ResDevWebLBPool**, click **IPv4**, and then click **Availability set** in the **Associated to** drop down list.
 
-5. On the **Choose virtual machines** blade, click **Choose an availability set**, and then, on the **Choose an availability set** blade, click **ResDevWebAS**.
+5. In the **Availability set** drop down list, click **ResDevWebAS**.
 
-6. On the **Choose virtual machines** blade, click **Choose the virtual machines**, click the check boxes to the left of **ResDevWebVM1** and **ResDevWebVM2**, and then click **Select**.
+6. Click **Add a target network IP configuration**, in the **Target virtual machine** drop down list, click **ResDevWebVM1** and, in the **Network IP configuration** drop down list, click the ipconfig1 entry.
 
-7. On the **Choose virtual machines** blade, click **OK**.
+7. Click **Add a target network IP configuration**, in the **Target virtual machine** drop down list, click **ResDevWebVM2** and, in the **Network IP configuration** drop down list, click the ipconfig1 entry.
 
-8. On the **Add backend pool** blade, click **OK**. Wait until the operation completes.
+8. Click **OK**. Wait until the operation completes.
 
 9. On the ResDevWebLB blade, click **Health probes**, and then click **Add**. 
 
