Lab 10: Set-ADUser20533.ps1 does not contain a signature, modified text accordingly. Fixed numbering.

--- a/Instructions/20533C_LAB_AK_10.md
+++ b/Instructions/20533C_LAB_AK_10.md
@@ -12,7 +12,7 @@
   Notepad D:\Labfiles\Lab10\Starter\Set-ADUsers20533C10Lab.ps1
   ```
 
-3. In Notepad, select the first 8 lines in the file, down to, but without the the line starting with **#SIG # Begin signature block**
+3. In Notepad, select all lines in the file.
 
 4. In Notepad, click **Edit** and, in the drop-down menu, click **Copy**.
 
@@ -117,9 +117,9 @@
 
 #### Task 3: Install Azure AD Connect with custom settings
   
-1. Start another Internet Explorer window and browse to https://www.microsoft.com/en-us/download/details.aspx?id=47594
+1. Switch to the Internet Explorer window containing the Azure portal. In the **AdatumSync** Azure Active Directory blade, click **Azure AD Connect**. 
 
-2. On the **Microsoft Azure Active Directory Connect** page, click **Download**.
+2. On the **AdatumSync - Azure AD Connect** blade, click **Download Azure AD Connect**. On The Microsoft **Azure Active Directory Connect** page, click **Download**.
 
 3. In the pop-up window, click **Save**.
 
