--- a/Instructions/20533C_LAB_AK_04.md
+++ b/Instructions/20533C_LAB_AK_04.md
@@ -65,7 +65,7 @@
 
 15. On the **Settings** blade, specify the following settings:
 
-  - Use managed disks: **No**
+  - Use managed disks: **Yes**
 
   - Virtual network: _Accept the default name **20533C0401-LabRG-vnet** and settings_
 
@@ -115,7 +115,7 @@
 
 25. On the **Settings** blade, specify the following settings:
 
-  - Use managed disks: **No**
+  - Use managed disks: **Yes**
 
   - Virtual network: **20533C0401-LabRG-vnet**
 
@@ -226,9 +226,9 @@
   - Floating IP (direct server return): **Disabled**
 
 
-1. Wait until the operation completes.
+16. Wait until the operation completes.
 
-2. On the ResDevWebLB blade, click **Overview**. In the **Essentials** section, you should be able to identify the public IP address assigned to the load balancer. Note that at this point, you will not be able to connect to the two virtual machines in the backend pool, because they are not running a web server and the connectivity is additionally restricted by default network security group settings and the operating system-level firewall. You will change these settings later in this lab.
+17. On the ResDevWebLB blade, click **Overview**. In the **Essentials** section, you should be able to identify the public IP address assigned to the load balancer. Note that at this point, you will not be able to connect to the two virtual machines in the backend pool, because they are not running a web server and the connectivity is additionally restricted by default network security group settings and the operating system-level firewall. You will change these settings later in this lab.
 
 
 > **Result**: After completing this exercise, you should have created an availability set for Azure VMs and configured them up as a load balanced pair.
