--- a/Instructions/20533C_LAB_AK_04.md
+++ b/Instructions/20533C_LAB_AK_04.md
@@ -31,7 +31,7 @@
   - Update domains: **5**
 > **Note:** The number of update domains can vary between 5 and 20.
 
-  - Managed: **Yes**
+  - Use managed disks: **No (Classic)**
 
 7. Wait for deployment to complete. This should take only a few seconds.
 
