--- a/Instructions/20533C_LAB_AK_04.md
+++ b/Instructions/20533C_LAB_AK_04.md
@@ -65,7 +65,7 @@
 
 15. On the **Settings** blade, specify the following settings:
 
-  - Use managed disks: **Yes**
+  - Use managed disks: **No**
 
   - Virtual network: _Accept the default name **20533C0401-LabRG-vnet** and settings_
 
@@ -115,7 +115,7 @@
 
 25. On the **Settings** blade, specify the following settings:
 
-  - Use managed disks: **Yes**
+  - Use managed disks: **No**
 
   - Virtual network: **20533C0401-LabRG-vnet**
 
