--- a/Instructions/20533C_LAB_04.md
+++ b/Instructions/20533C_LAB_04.md
@@ -122,7 +122,7 @@ The main tasks for this exercise are as follows:
 
   - Size: **A1 Standard** (choose the **D1_v2 Standard** or similar if **A1 Standard** is not available)
 
-  - Use managed disks: **Yes**
+  - Use managed disks: **No**
 
   - Virtual network: **20533C0401-LabRG-vnet**
 
