--- a/Instructions/20533C_LAB_AK_03.md
+++ b/Instructions/20533C_LAB_AK_03.md
@@ -39,9 +39,13 @@
 
 6. On the Choose subnet blade, click **Database**.
 
-7. On the Settings blade, click **OK**
+7. In the Boot diagnostics section, click **Disabled**.
 
-8. On the Summary blade, click **OK**.
+8. Ensure that Guest OS diagnostics are set to **Disabled**.
+
+9. On the Settings blade, click **OK**
+
+10. On the Summary blade, click **OK**.
 
 
 #### Task 2: Use Azure PowerShell to create a virtual machine
