--- a/Instructions/20533C_LAB_03.md
+++ b/Instructions/20533C_LAB_03.md
@@ -70,6 +70,10 @@ The main tasks for this exercise are as follows:
   - Network name: **HQ-VNET**
 
   - Subnet name: **Database**
+  
+  - Boot diagnostics: **Disabled**.
+
+  - Guest OS diagnostics: **Disabled**.
 
 
 #### Task 2: Use Azure PowerShell to create a virtual machine
