--- a/Instructions/20533C_LAB_04.md
+++ b/Instructions/20533C_LAB_04.md
@@ -246,7 +246,7 @@ The main tasks for this exercise are as follows:
 
 9. Initiate a Remote Desktop session to ResDevWebVM1 from the Azure portal.
 
-10. When prompted to enter credentials to connect, type **Student** as the user name and **Pa55w.rd** as the password.
+10. When prompted to enter credentials to connect, type **Student** as the user name and **Pa55w.rd1234** as the password.
 
 11. Once you establish a Remote Desktop session to the VM, in the **Server Manager** window, verify that IIS appears in the left pane, indicating that the Web Server (IIS) server role is installed.
 
