--- a/Instructions/20533C_LAB_02.md
+++ b/Instructions/20533C_LAB_02.md
@@ -321,7 +321,7 @@ The main tasks for this exercise are as follows:
 
 5. From the Windows PowerShell prompt, retrieve the public key of the root certificate by running:
   ```
-  [System.Convert]::ToBase64String($rootCert.GetPublicKey())
+  [System.Convert]::ToBase64String($rootCert.RawData)
   ```
 
 6. Copy the the output of the previous command to the clipboard.
