--- a/Instructions/20533C_LAB_AK_02.md
+++ b/Instructions/20533C_LAB_AK_02.md
@@ -255,7 +255,7 @@
 11. Type the following command, and then press Enter:
 
   ```
-  [System.Convert]::ToBase64String($rootCert.GetPublicKey())
+  [System.Convert]::ToBase64String($rootCert.RawData)
   ```
 
 12. Select the the output of the previous command and press Enter.
