--- a/Instructions/20533C_LAB_06.md
+++ b/Instructions/20533C_LAB_06.md
@@ -83,7 +83,7 @@ The main tasks for this exercise are as follows:
 3. Test the installation by running the following command at a command prompt: 
 
   ```
-  AzCopy /?
+  .\AzCopy /?
   ```
 
 4. Keep the Windows PowerShell ISE window open for the next task.
