--- a/Instructions/20533C_LAB_AK_10.md
+++ b/Instructions/20533C_LAB_AK_10.md
@@ -197,6 +197,7 @@
   Get-ADSyncScheduler
   ```
 > **Note:** **Get-ADSyncScheduler** displays the current configuration settings for synchronization with Azure AD.
+> **Note:** If the command **GET-ADSyncScheduler** is not found, you may have to manually import the Azure AD Connect powershell module by using the following command : **Import-Module "C:\\Program Files\\Microsoft AZure AD Sync\\Bin\\ADSync\\ADSync.psd1"**
 
 7. At the Windows PowerShell command prompt, type the following command, and then press Enter:
   ```
