--- a/Instructions/20533C_LAB_02.md
+++ b/Instructions/20533C_LAB_02.md
@@ -162,7 +162,7 @@ The main tasks for this exercise are as follows:
   
 1. From MIA-CL1, start Windows PowerShell ISE as Administrator
 
-2. From the Windows PowerShell ISE console, run D:\Labfiles\Lab02\Starter\New-AzureRm20533C02VM.ps1
+2. From the Windows PowerShell ISE console, run D:\\Labfiles\\Lab02\\Starter\\New-AzureRm20533C02VM.ps1
 
 3. When prompted to sign in (twice), type in the user name and the password which is either the Service Administrator or a Co-Administrator in your Azure subscription.
 
@@ -227,7 +227,7 @@ The main tasks for this exercise are as follows:
   
 1. On MIA-CL1, in the Internet Explorer window, in the Azure portal, on the **ADATUM-BRANCH-VNET** blade, on the **VPN connections** tile, verify that the **Gateway** entry has an IP address assigned to it. If this is not the case, wait until IP address does appear. 
 
-2. On MIA-CL1, from the Windows PowerShell window, first review and then run **D:\Labfiles\Lab02\Starter\New-AzureRm20533C02Gateway.ps1**
+2. On MIA-CL1, from the Windows PowerShell window, first review and then run D:\\Labfiles\\Lab02\\Starter\\New-AzureRm20533C02Gateway.ps1
 
 3. When prompted, sign-in (twice) with an account that is either the Service Administrator or a Co-Administrator of your Azure subscription.
 
