--- a/Instructions/20533C_LAB_03.md
+++ b/Instructions/20533C_LAB_03.md
@@ -80,7 +80,7 @@ The main tasks for this exercise are as follows:
   
 1. On MIA-CL1, open a Windows PowerShell Integrated Scripting Environment (ISE) window.
 
-2. In the Windows PowerShell ISE, open the script **D:\Labfiles\Lab03\Starter\New-AzureRm20533C03VM.ps1** and review its content.
+2. In the Windows PowerShell ISE, open the script D:\\Labfiles\\Lab03\\Starter\\New-AzureRm20533C03VM.ps1 and review its content.
 
 3. Run the script. 
 
@@ -183,7 +183,7 @@ The main tasks for this exercise are as follows:
   
 1. On MIA-CL1, on the taskbar, click the **Visual Studio** icon. If prompted with the message that the evaluation period has ended, click the **Sign in** and provide your Microsoft account credentials. Then, on the **Host your next project in Visual Studio Team Services** page, click the **Not now, maybe later** link. Next, click **Close**.
 
-2. In Visual Studio, open the solution **ResDevLinuxDeploy.sln** from **D:\Labfiles\Lab03\Starter\ResDev\ResDevLinuxDeploy**. 
+2. In Visual Studio, open the solution **ResDevLinuxDeploy.sln** from D:\\Labfiles\\Lab03\\Starter\\ResDev\\ResDevLinuxDeploy. 
 
 3. View the contents of the **azuredeploy.json** template.
 
@@ -280,12 +280,12 @@ The main tasks for this exercise are as follows:
 
 #### Task 1: Use Azure PowerShell to deploy the Windows virtual machines
   
-1. In the Windows PowerShell ISE window that you opened in the previous exercise, open **D:\Labfiles\Lab03\Starter\ResDev\ResDevWindowsDeploy.ps1**
+1. In the Windows PowerShell ISE window that you opened in the previous exercise, open D:\\Labfiles\\Lab03\\Starter\\ResDev\\ResDevWindowsDeploy.ps1
 
 2. Review the script that will initiate the template.
 > **Note:** Note the $templateFile and $rgName variables. These represent the location of the Azure Resource Manager template file and the resource group to which you will deploy the virtual machines.
 
-3. Switch to Visual Studio and open the file **D:\Labfiles\Lab03\Starter\ResDev\ResDevWindowsDeployTemplate.json**. 
+3. Switch to Visual Studio and open the file D:\\Labfiles\\Lab03\\Starter\\ResDev\\ResDevWindowsDeployTemplate.json. 
 > **Note:** Note that the template has the same structure as the template for the Linux virtual machines in the previous exercise. The only difference between the two templates is the variables declaring the image and operating system details.
 
 4. Close Visual Studio.
