--- a/Instructions/20533C_LAB_05.md
+++ b/Instructions/20533C_LAB_05.md
@@ -1,4 +1,4 @@
-﻿# Module 5: Implementing Azure App Service
+# Module 5: Implementing Azure App Service
 # Lab: Implementing web apps
   
 ### Scenario
@@ -120,7 +120,7 @@ The main tasks for this exercise are as follows:
   
 1. From the Azure portal, download the publish profile for the Web app you created in Exercise 1.
 
-2. Open the web-application project stored in **D:\LabFiles\Lab05\Starter\AdatumWebsite\AdatumWebsite.sln** in Visual Studio 2015:
+2. Open the web-application project stored in D:\\LabFiles\\Lab05\\Starter\\AdatumWebsite\\AdatumWebsite.sln in Visual Studio 2015:
 
 3. Start debugging the web application, examine the contents, and then close Internet Explorer.
 
@@ -168,7 +168,7 @@ The main tasks for this exercise are as follows:
   
 1. In the Azure portal, download a publishing profile for the Staging slot for your web app.
 
-2. Open the project in **D:\LabFiles\Lab05\Starter\NewAdatumWebsite\AdatumWebsite.sln** in Visual Studio
+2. Open the project in D:\\LabFiles\\Lab05\\Starter\\NewAdatumWebsite\\AdatumWebsite.sln in Visual Studio
 
 3. Start the web app publishing process and import the staging publishing profile that you downloaded in the first step.
 
@@ -255,7 +255,7 @@ The main tasks for this exercise are as follows:
 
 6. In the Azure portal, download a publishing profile for the web app you just created.
 
-7. Open the project in **D:\LabFiles\Lab05\Starter\AdatumWebsite\AdatumWebsite.sln** in Visual Studio:
+7. Open the project in D:\\LabFiles\\Lab05\\Starter\\AdatumWebsite\\AdatumWebsite.sln in Visual Studio:
 
 8. Start the Publish Web Wizard, and then import the publish settings file that you just downloaded. 
 > **Note:** Be sure to import the new publish settings profile on the **Profile** tab, so that you will publish its content to the new web app.
