--- a/Instructions/20533C_LAB_06.md
+++ b/Instructions/20533C_LAB_06.md
@@ -1,4 +1,4 @@
-﻿# Module 6: Planning and implementing storage, backup, and recovery services
+# Module 6: Planning and implementing storage, backup, and recovery services
 # Lab: Planning and implementing Azure Storage
   
 ### Scenario
@@ -131,7 +131,7 @@ The main tasks for this exercise are as follows:
   
 1. Switch to the Windows PowerShell ISE window and run `Add-AzureRmAccount`. When prompted, sign in by using the Microsoft account that is either the Service Administrator or a Co-Administrator of your Microsoft Azure subscription. 
 
-2. From the Windows PowerShell ISE, open **D:\Labfiles\Lab06\Starter\New-FileShare_20533C06.ps1**.
+2. From the Windows PowerShell ISE, open D:\\Labfiles\\Lab06\\Starter\\New-FileShare_20533C06.ps1.
 
 3. In the script pane, in the **$storageAccountName** variable declaration at the beginning, replace the `<your_storage_account_name>` value with the name of the Azure storage account that you created in the previous exercise.
 
@@ -249,7 +249,7 @@ The main tasks for this exercise are as follows:
 
 2. Download the vault credentials file from the Azure portal
 
-3. Register MIA-CL1 with the vault. Prior to registration, generate a passphrase and store it in the **D:\Labfiles\Lab06\Starter** folder.
+3. Register MIA-CL1 with the vault. Prior to registration, generate a passphrase and store it in the D:\\Labfiles\\Lab06\\Starter folder.
 
 4. At the end of the registration process, start the Azure Backup console and leave it open for the next task.
 
@@ -257,7 +257,7 @@ The main tasks for this exercise are as follows:
 
 #### Task 4: Create a backup schedule
   
-1. Use Azure Backup to schedule a daily backup to run at 4:30 AM and protect the following subfolders in the D:\Labfiles\Lab06\Starter folder:
+1. Use Azure Backup to schedule a daily backup to run at 4:30 AM and protect the following subfolders in the D:\\Labfiles\\Lab06\\Starter folder:
 
   - asset-images
 
