--- a/Instructions/20533C_LAB_07.md
+++ b/Instructions/20533C_LAB_07.md
@@ -1,4 +1,4 @@
-﻿# Module 7: Planning and implementing Azure SQL Database
+# Module 7: Planning and implementing Azure SQL Database
 # Lab: Planning and implementing Azure SQL Database
   
 ### Scenario
@@ -122,7 +122,7 @@ Note: The Microsoft Azure portal is continually improved, and the user interface
 
 2. In SQL Server Management Studio, in Object Explorer, verify that the **operations** database appears in the list of databases.
 
-3. From SQL Server Management Studio, execute the Transact SQL script stored in the **Operations.sql** file in the **D:\Labfiles\Lab07\Starter** folder.
+3. From SQL Server Management Studio, execute the Transact SQL script stored in the **Operations.sql** file in the D:\\Labfiles\\Lab07\\Starter folder.
 
 4. From SQL Server Management Studio, run the following query against the **operations** database:
 
@@ -231,7 +231,7 @@ GO
 
 #### Task 3: Configure an application connection string
   
-1. Start Visual Studio and open the **SalesApp.sln** solution in the **D:\Labfiles\Lab07\Starter folder**. Then, open its **Web.config** file and note that the **SalesConnectionString** element connects to the sales database on the localhost server using integrated security (Windows authentication).
+1. Start Visual Studio and open the **SalesApp.sln** solution in the D:\\Labfiles\\Lab07\\Starter folder. Then, open its **Web.config** file and note that the **SalesConnectionString** element connects to the sales database on the localhost server using integrated security (Windows authentication).
 
 2. In Internet Explorer, in the Azure portal, browse to the **sales** database blade.
 
