--- a/Instructions/20533C_LAB_08.md
+++ b/Instructions/20533C_LAB_08.md
@@ -110,7 +110,7 @@ Password: **Pa55w.rd**
 
 #### Task 3: Configure the service definition file
   
-1. Launch Visual Studio 2015, and then open the **ServiceConfiguration.Cloud.cscfg** file located in **D:\LabFiles\Lab08\Starter\Production\Package** folder.
+1. Launch Visual Studio 2015, and then open the **ServiceConfiguration.Cloud.cscfg** file located in D:\\LabFiles\\Lab08\\Starter\\Production\\Package folder.
 
 2. In the file, set the **Instance count** attribute for the **AdatumAdsWebRole** and **AdatumAdsWorkerRole** roles to **2**.
 
@@ -146,9 +146,9 @@ Password: **Pa55w.rd**
 
 2. As part of the creation of the cloud service, set the production deployment name to **AdatumAdsProd**.
 
-3. Upload the package **AdatumAds.cspkg** from **D:\LabFiles\Lab08\Starter\Production\Package**.
+3. Upload the package **AdatumAds.cspkg** from D:\\LabFiles\\Lab08\\Starter\\Production\\Package.
 
-4. Upload the configuration file **ServiceConfiguration.Cloud.cscfg** from **D:\LabFiles\Lab08\Starter\Production\Package**.
+4. Upload the configuration file **ServiceConfiguration.Cloud.cscfg** from D:\\LabFiles\\Lab08\\Starter\\Production\\Package.
 
 5. Wait for the deployment to complete.
 
@@ -179,9 +179,9 @@ The main tasks for this exercise are as follows:
 
 2. Set the staging deployment name to **AdatumAdsStage**.
 
-3. Upload the package **AdatumAds.cspkg** from **D:\LabFiles\Lab08\Starter\Staging\Package**.
+3. Upload the package **AdatumAds.cspkg** from D:\\LabFiles\\Lab08\\Starter\\Staging\\Package.
 
-4. Upload the configuration file **ServiceConfiguration.Cloud.cscfg** from **D:\LabFiles\Lab08\Starter\Production\Package**.
+4. Upload the configuration file **ServiceConfiguration.Cloud.cscfg** from D:\\LabFiles\\Lab08\\Starter\\Production\\Package.
 
 5. Wait for the deployment to complete
 
