--- a/Instructions/20533C_LAB_09.md
+++ b/Instructions/20533C_LAB_09.md
@@ -179,7 +179,7 @@ The main tasks for this exercise are as follows:
   
 1. Start **Windows PowerShell** ISE as an administrator.
 
-2. Open **D:\Labfiles\Lab09\Starter\Set-AzureAD20553C09Lab.ps1**.
+2. Open D:\\Labfiles\\Lab09\\Starter\\Set-AzureAD20553C09Lab.ps1.
 
 3. In the PowerShell ISE, in the command prompt pane, enter the following command, and then press Enter:
 
