--- a/Instructions/20533C_LAB_10.md
+++ b/Instructions/20533C_LAB_10.md
@@ -47,7 +47,7 @@ The main tasks for this exercise are as follows:
   
 1. Sign in to MIA-CL1 as **Student** with the password **Pa55w.rd**.
 
-2. Open the file **D:\Labfiles\Lab10\Starter\Set-ADUsers20533C1001.ps1** in Notepad and copy all lines to Clipboard.
+2. Open the file D:\\Labfiles\\Lab10\\Starter\\Set-ADUsers20533C1001.ps1 in Notepad and copy all lines to Clipboard.
 
 3. In the Internet Explorer window, navigate to the Azure portal and, when prompted, sign in by using the Microsoft account that is the Service Administrator or a Co-Admininstrator of your Azure subscription.
 
@@ -110,7 +110,7 @@ The main tasks for this exercise are as follows:
 
 3. Set the credentials for Azure AD tenant AdatumSync to the SyncAdmin Global Administrator account.
 
-4. Set the credentials for the Active Directory forest to **ADATUM\Student** with the password **Pa55w.rd1234**.
+4. Set the credentials for the Active Directory forest to **ADATUM\\Student** with the password **Pa55w.rd1234**.
 
 5. On the **Domain and OU filtering** page, limit synchronization to the **AccountsToSync** organization unit only.
 
