--- a/Instructions/20533C_LAB_11.md
+++ b/Instructions/20533C_LAB_11.md
@@ -133,7 +133,7 @@ The main tasks for this exercise are as follows:
 
 #### Task 1: Import a runbook
   
-1. From the Azure portal, import the PowerShell workflow script **D:\Labfiles\Lab11\Starter\Stop-AzureRm20533C11VMs.ps1** into your Automation account.
+1. From the Azure portal, import the PowerShell workflow script D:\\Labfiles\\Lab11\\Starter\\Stop-AzureRm20533C11VMs.ps1 into your Automation account.
 
 2. Review the content of the runbook.
 
