--- a/Instructions/20533C_LAB_AK_01.md
+++ b/Instructions/20533C_LAB_AK_01.md
@@ -183,7 +183,7 @@ Login-AzureRmAccount
 
 #### Task 2: Manage Azure resources and resource groups by using Azure PowerShell
 
-1. In the Windows PowerShell ISE window, open the D:\Labfiles\Lab01\Starter\Start-AzureRm20553C01Lab.ps1 file.
+1. In the Windows PowerShell ISE window, open the D:\\Labfiles\\Lab01\\Starter\\Start-AzureRm20553C01Lab.ps1 file.
 
 2. In the **# Variables** section, note the values of predefined variables. They need to match the names of resource and the resource group you created in the previous exercise.
 
